k8s/dev/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: chat-app
spec:
  parentRefs:
    - name: gtw
      namespace: chat-app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          namespace: chat-app
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend
  namespace: chat-app
spec:
  parentRefs:
    - name: gtw
      namespace: chat-app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend
          namespace: chat-app
          port: 8282
